test(driver): keep contracts Android-compatible